syntax = "proto3";

package holos.console.v1;

import "holos/console/v1/rbac.proto";
import "holos/console/v1/secrets.proto";

option go_package = "github.com/holos-run/holos-console/gen/holos/console/v1;consolev1";

// ProjectService provides CRUD operations for projects.
// A project is a Kubernetes Namespace labeled app.kubernetes.io/managed-by=console.holos.run.
service ProjectService {
  // ListProjects returns all projects the user has access to.
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);

  // GetProject retrieves a project by name.
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse);

  // CreateProject creates a new project (namespace with managed-by label and grants).
  // Requires PERMISSION_PROJECTS_CREATE (owner on at least one existing project).
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);

  // UpdateProject updates project metadata (description, display name).
  // Requires PERMISSION_PROJECTS_WRITE on the project.
  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse);

  // DeleteProject deletes a managed namespace.
  // Requires PERMISSION_PROJECTS_DELETE on the project.
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse);

  // UpdateProjectSharing updates the sharing grants on a project.
  // Requires PERMISSION_PROJECTS_ADMIN on the project.
  rpc UpdateProjectSharing(UpdateProjectSharingRequest) returns (UpdateProjectSharingResponse);

  // GetProjectRaw retrieves the full Kubernetes Namespace object as verbatim JSON.
  // The backend returns the Namespace exactly as the K8s API provides it, with no
  // field filtering. Requires authentication and PERMISSION_PROJECTS_READ.
  rpc GetProjectRaw(GetProjectRawRequest) returns (GetProjectRawResponse);
}

// Project represents a project with its metadata and grants.
message Project {
  // name is the Kubernetes namespace name.
  string name = 1;
  // display_name is a human-readable display name for the project.
  string display_name = 2;
  // description is a human-readable description of the project.
  string description = 3;
  // user_grants are the per-user sharing grants on this project.
  repeated ShareGrant user_grants = 4;
  // group_grants are the per-group sharing grants on this project.
  repeated ShareGrant group_grants = 5;
  // user_role is the calling user's effective role on this project.
  Role user_role = 6;
  // organization is the organization this project belongs to.
  string organization = 7;
}

// ListProjectsRequest contains optional filters for listing projects.
message ListProjectsRequest {
  // organization filters projects by organization. When empty, returns all accessible projects.
  string organization = 1;
}

// ListProjectsResponse contains the list of projects the user can access.
message ListProjectsResponse {
  // projects contains the list of projects.
  repeated Project projects = 1;
}

// GetProjectRequest contains the name of the project to retrieve.
message GetProjectRequest {
  // name is the name of the project to retrieve.
  string name = 1;
}

// GetProjectResponse contains the project.
message GetProjectResponse {
  // project is the retrieved project.
  Project project = 1;
}

// CreateProjectRequest contains the fields for creating a new project.
message CreateProjectRequest {
  // name is the Kubernetes namespace name for the project.
  string name = 1;
  // display_name is a human-readable display name for the project.
  string display_name = 2;
  // description is a human-readable description of the project.
  string description = 3;
  // user_grants are the initial per-user sharing grants.
  repeated ShareGrant user_grants = 4;
  // group_grants are the initial per-group sharing grants.
  repeated ShareGrant group_grants = 5;
  // organization is the organization to create this project in.
  string organization = 6;
}

// CreateProjectResponse contains the name of the created project.
message CreateProjectResponse {
  // name is the name of the created project.
  string name = 1;
}

// UpdateProjectRequest contains the fields to update on a project.
message UpdateProjectRequest {
  // name is the name of the project to update.
  string name = 1;
  // display_name is the new display name. When unset, preserves the existing value.
  optional string display_name = 2;
  // description is the new description. When unset, preserves the existing value.
  optional string description = 3;
}

// UpdateProjectResponse is empty on success.
message UpdateProjectResponse {}

// DeleteProjectRequest contains the name of the project to delete.
message DeleteProjectRequest {
  // name is the name of the project to delete.
  string name = 1;
}

// DeleteProjectResponse is empty on success.
message DeleteProjectResponse {}

// UpdateProjectSharingRequest contains the sharing grants to set on a project.
message UpdateProjectSharingRequest {
  // name is the name of the project to update sharing for.
  string name = 1;
  // user_grants are the per-user sharing grants to set.
  repeated ShareGrant user_grants = 2;
  // group_grants are the per-group sharing grants to set.
  repeated ShareGrant group_grants = 3;
}

// UpdateProjectSharingResponse contains the updated project.
message UpdateProjectSharingResponse {
  // project is the updated project with new sharing grants.
  Project project = 1;
}

// GetProjectRawRequest contains the name of the project to retrieve as raw JSON.
message GetProjectRawRequest {
  // name is the name of the project to retrieve.
  string name = 1;
}

// GetProjectRawResponse contains the full Kubernetes Namespace object as JSON.
message GetProjectRawResponse {
  // raw is the verbatim JSON-serialized Namespace object from the K8s API.
  string raw = 1;
}
